--- a/frontend/src/pages/SplashPage/SplashPage.css
+++ b/frontend/src/pages/SplashPage/SplashPage.css
@@ -1,3 +1,5 @@
+@import url(./SplashSliders.css);
+
 .splash-opening-img {
     content: url(./mclar.webp);
     width: 900px;
@@ -25,12 +27,9 @@
 
 .try-hosting-null {
     height: 600px;
-    /* border: 1px solid black; */
-    /* background-color: rgb(235, 238, 247); */
 }
 
 .splash-width-container {
-    /* width: 1100px; */
     margin: 0 auto
 }
 
@@ -84,10 +83,10 @@
 
 .search-button {
     background-color: rgb(255, 26, 87);
-    padding: 10px;
-    width: 100%;
+    padding: 5px 20px;
     color: white;
-    font-size: large;
+    font-size: medium;
+    text-decoration: none;
 }
 
 .splash-second-img {
@@ -99,8 +98,8 @@
 
 .splash-second-message {
     position: absolute;
-    top: 610px;
-    right: 250px;
+    top: 575px;
+    right: 100px;
     width: 350px;
 }
 
