--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -9,6 +9,7 @@
     z-index: 990;
     left: 0;
     top: 0;
+    height: 50px;
     box-shadow: 2px 2px 10px rgb(208, 208, 218);
     margin: 0 auto;
 }
@@ -43,6 +44,9 @@ ul {
 .navigation-links {
     display: flex;
     justify-content: space-between;
+    position: fixed;
+    width: 99%;
+    top: 6px;
 }
 
 .edit-container {
