--- a/frontend/src/pages/SplashPage/SplashPage.css
+++ b/frontend/src/pages/SplashPage/SplashPage.css
@@ -1,5 +1,4 @@
 @import url(./SplashSliders.css);
-
 .splash-opening-img {
     content: url(./mclar.webp);
     width: 900px;
@@ -26,7 +25,7 @@
 }
 
 .try-hosting-null {
-    height: 600px;
+    height: 550px;
 }
 
 .splash-width-container {
@@ -98,8 +97,8 @@
 
 .splash-second-message {
     position: absolute;
-    top: 575px;
-    right: 100px;
+    top: 560px;
+    right: 20px;
     width: 350px;
 }
 
@@ -111,6 +110,8 @@
 .splash-para {
     color: rgb(39, 43, 5);
     font-size: large;
+    /* padding-left: 20px; */
+    width: 250px;
 }
 
 .learn-more-button {
@@ -132,4 +133,21 @@
     background-color: rgb(190, 200, 214);
     height: 120px;
     margin-top: -100px;
+}
+
+.white-car {
+    content: url(./whitecar2.png);
+    width: 700px;
+    padding-left: 50px;
+}
+
+.white-car-message {
+    position: relative;
+    color: black;
+    width: 600px;
+    margin: 0 auto;
+}
+
+.try-hosting-second {
+    height: 550px;
 }
