--- a/frontend/src/pages/SplashPage/SplashSliders.css
+++ b/frontend/src/pages/SplashPage/SplashSliders.css
@@ -17,14 +17,13 @@
 .sidescroll-image {
     width: 300px;
     height: auto;
-    padding: 10px;
     border-radius: 25px;
+    margin: 10px;
 }
 
 .sidescroll-image:hover {
-    box-shadow: 3px 3px 10px blue;
-    transition: ease-out 1s;
-    padding: none;
+    box-shadow: 1px 1px 10px rgb(3, 3, 77);
+    transition: ease-out .5s;
 }
 
 body {
@@ -60,17 +59,35 @@ body {
 }
 
 .meet-the-review {
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .worlds-hosts {
-    padding-top: 30px;
+    padding-top: 60px;
     text-align: center;
     font-size: 45px;
     width: 600px;
     margin: 0 auto;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
+}
+
+.worlds-hosts-host {
+    padding-top: 20px;
+    text-align: center;
+    font-size: 45px;
+    width: 600px;
+    margin: 0 auto;
+    padding-bottom: 40px;
+}
+
+.worlds-hosts-freq {
+    padding-top: 10px;
+    text-align: center;
+    font-size: 45px;
+    width: 600px;
+    margin: 0 auto;
+    padding-bottom: 40px;
 }
 
 .hosts-block {
@@ -108,5 +125,4 @@ body {
     font-size: small;
     color: rgb(123, 124, 131);
     padding-bottom: 20px;
-
 }
