--- a/frontend/src/pages/About/About.css
+++ b/frontend/src/pages/About/About.css
@@ -1,3 +1,27 @@
 .about-me-container {
-    height: 800px;
+    height: 10000px;
+    background-color: rgba(0, 0, 0, 0.199);
+    width: 1200px;
+    margin: 0 auto;
+}
+
+.about-me-intro {
+    background-color: rgba(0, 0, 0, 0.331);
+    width: 1000px;
+    margin: auto;
+}
+
+.about-title {
+    font-size: 100px;
+    text-align: center;
+    margin-top: -10px;
+}
+
+.about-ending {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.about-para {
+
 }
