--- a/frontend/src/pages/HomePage/HomePage.css
+++ b/frontend/src/pages/HomePage/HomePage.css
@@ -62,15 +62,24 @@ input {
 }
 
 .booking-edit-form {
-    margin-top: 100px;
+    position: absolute;
+    top: 10%;
+    left: 40%;
     border: 1px solid black;
     background-color: white;
-    /* background-color: black; */
 }
+
+.booking-back-container {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.281);
+
+}
+
 
 .bookings-container {
     height: 1000px;
-    overflow-y:auto;
+    overflow-y: auto;
 }
 
 .booking-container {
@@ -93,5 +102,5 @@ input {
     background-color: rgb(241, 241, 242);
     display: grid;
     margin-top: -30px;
-    grid-template-columns: 2fr 5fr;
+    grid-template-columns: 2fr 6fr;
 }
