--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -78,10 +78,13 @@ ul {
     border: none;
     background: transparent;
     width: 100%;
-
     cursor: pointer;
     align-items: center;
     padding: 0 10px;
+}
+
+.user-button:hover {
+    background-color: rgba(48, 46, 46, 0.037);
 }
 
 .navi-tab {
@@ -107,9 +110,11 @@ ul {
 }
 
 .navi-button {
-    align-self: center;
-    text-align: center;
-    padding: 5px 20px;
+    padding: 0px 20px;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
     text-decoration: none;
     font-size: small;
     color: rgb(48, 48, 48);
@@ -118,7 +123,8 @@ ul {
 .navi-button:hover {
     /* background-color: rgb(240 240 240); */
     /* border-radius: 20px; */
-    box-shadow: 0 3px rgb(181, 181, 181);
+    /* box-shadow: 0 3px rgb(181, 181, 181); */
+    background-color: rgba(48, 46, 46, 0.037);
     cursor: pointer;
 }
 
@@ -131,9 +137,9 @@ ul {
 }
 
 .active {
-    box-shadow: 0 3px rgb(181, 181, 181);
-    border-radius: 40px;
     color: black;
+    background-color: rgba(135, 136, 153, 0.057);
+    border: .25px solid rgba(68, 67, 67, 0.432);
     font-weight: bolder;
     align-self: center;
 }
