--- a/frontend/src/pages/ImagePage/ImagePage.css
+++ b/frontend/src/pages/ImagePage/ImagePage.css
@@ -1,17 +1,19 @@
 .image-form-container {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    top: 20%;
-    background-color: white;
-    /* width: 500px; */
     border-radius: 15px;
     padding: 60px;
 }
 
 .img-container {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.297);
     display: flex;
     justify-content: center;
+    margin: 0 auto;
     /* max-width: 00px; */
 }
 
@@ -27,7 +29,7 @@
 .add-picture {
     border: none;
     background-color: rgb(24, 11, 167);
-    height: 100%;
+    /* height: 100%; */
     font-size: large;
     color: white;
     padding: 15px;
@@ -41,4 +43,14 @@
 .cancel-picture {
     background-color: blue;
     color: white;
+}
+
+.image-page-images {
+    background-color: white;
+    width: 800px;
+    height: 350px;
+}
+
+.image-form-contain {
+    margin: 0 auto;
 }
