--- a/frontend/src/pages/ImagePage/ImagePage.css
+++ b/frontend/src/pages/ImagePage/ImagePage.css
@@ -47,10 +47,46 @@
 
 .image-page-images {
     background-color: white;
-    width: 800px;
+    width: 700px;
     height: 350px;
+    overflow-y: scroll;
 }
 
 .image-form-contain {
     margin: 0 auto;
+}
+
+.image-page-image {
+    min-width: 100px;
+    max-width: 150px;
+}
+
+.image-placement {
+    padding: 15px;
+}
+
+.image-button {
+    border: none;
+    background-color: inherit;
+}
+
+.single-image {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.674);
+}
+
+.image-buttn {
+    background-color: inherit;
+    border: none;
+}
+
+.image-button-carrier {
+    position: relative;
+    top: 10%;
+    display: flex;
+    justify-content: center;
 }
