--- a/frontend/src/pages/ImagePage/ImagePage.css
+++ b/frontend/src/pages/ImagePage/ImagePage.css
@@ -10,7 +10,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.297);
+    background-color: rgba(0, 0, 0, 0.715);
     display: flex;
     justify-content: center;
     margin: 0 auto;
@@ -84,9 +84,19 @@
     border: none;
 }
 
+.image-page-image:hover {
+    box-shadow: 1px 1px 10px rgb(56, 71, 144);
+    transition: ease .15s;
+}
+
 .image-button-carrier {
     position: relative;
     top: 10%;
     display: flex;
     justify-content: center;
+}
+
+.the-button-image:hover {
+    box-shadow: 3px 3px 20px rgb(0, 255, 166);
+    transition: ease-in .25s;
 }
