--- a/frontend/src/pages/ImagePage/ImagePage.css
+++ b/frontend/src/pages/ImagePage/ImagePage.css
@@ -43,6 +43,8 @@
 .cancel-picture {
     background-color: blue;
     color: white;
+    padding: 17px;
+    font-size: large;
 }
 
 .image-page-images {
