--- a/frontend/src/pages/UsersToy/EditUsersToy.css
+++ b/frontend/src/pages/UsersToy/EditUsersToy.css
@@ -34,7 +34,7 @@
     border-radius: 10px;
 }
 
-.edit-toy-texarea  {
+.edit-toy-texarea {
     width: 100%;
     height: 100px;
     resize: none;
@@ -45,11 +45,29 @@
 }
 
 .add-pics-butt {
-    background-color: yellow;
-    color: black;
+    background-color: inherit;
+    border: none;
+    color: blue;
+    font-size: small;
+    height: 40px;
+    margin-left: 200px;
+}
+
+.add-pics-butt:hover {
+    box-shadow: 1px 1px 10px rgb(36, 33, 36);
+    background-color: blue;
+    color: white;
 }
 
 .cancel-butt-edit {
+    color: red;
+    font-size: small;
+    background-color: inherit;
+    border: none;
+}
+
+.cancel-butt-edit:hover {
+    box-shadow: 1px 1px 10px rgb(36, 33, 36);
     color: white;
     background-color: red;
 }
@@ -79,6 +97,7 @@
 }
 
 .buttons-container {
-    width: 97%;
+    /* width: 50%; */
     display: flex;
+    justify-content: space-around;
 }
