--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -15,13 +15,15 @@
     color: rgb(19, 19, 44);
     background-color: rgb(241, 244, 251);
     width: 100%;
-    height: 380px;
+    position: fixed;
+    /* overflow-y: scroll; */
+    height: 580px;
     border-top: 1px solid rgb(223, 225, 234);
 }
 
 .footer-tabs {
     display: grid;
-    padding-left: 5%;
+    padding-left: 10%;
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
@@ -111,4 +113,9 @@ a:visited {
     box-shadow: 3px 3px 20px rgb(126, 85, 3);
     border-radius: 40px;
     transition: ease-in-out 1.3s;
+}
+
+.personal-injury {
+    padding: 50px 75px;
+    border-bottom: 1px solid rgb(213, 213, 213);
 }
