--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -15,9 +15,9 @@
     color: rgb(19, 19, 44);
     background-color: rgb(241, 244, 251);
     width: 100%;
-    position: fixed;
+    position: relative;
     /* overflow-y: scroll; */
-    height: 580px;
+    height: 680px;
     border-top: 1px solid rgb(223, 225, 234);
 }
 
