--- a/frontend/src/pages/HomePage/HomePage.css
+++ b/frontend/src/pages/HomePage/HomePage.css
@@ -64,7 +64,7 @@ input {
 }
 
 .bookings-container {
-    height: 800px;
+    height: 1000px;
     overflow-y: auto;
 }
 
@@ -77,11 +77,12 @@ input {
     width: 80%;
     margin: 0 auto;
     padding: 20px;
+    /* height: 1000px; */
 }
 
 .home-body {
     width: 100%;
-    height: 1000px;
+    height: 500px;
 }
 
 .home-body-container {
