--- a/frontend/src/pages/UsersToy/EditUsersToy.css
+++ b/frontend/src/pages/UsersToy/EditUsersToy.css
@@ -15,21 +15,24 @@
 }
 
 .edit-toy-form {
-    padding: 70px;
+    padding: 60px;
+    width: 500px;
+    height: 500px;
+    margin: 0 auto;
 }
 
 .host-form-container {}
 
 .edit-toy-input {
     width: 100%;
-    height: 40px;
+    height: 35px;
 }
 
 .edit-form {
     position: relative;
     top: 10%;
     margin: 0 auto;
-    width: 70%;
+    width: 700px;
     background-color: white;
     border-radius: 10px;
 }
