--- a/frontend/src/pages/HostPage/HostPage.css
+++ b/frontend/src/pages/HostPage/HostPage.css
@@ -1,14 +1,13 @@
 .host-heading {
     width: 100%;
-    margin-top: 0;
+    margin-top: 30px;
     /* background-color: black; */
-    padding-left: 24%;
+    padding-left: 60px;
+    text-align: left;
 }
-
 
 .host-form {
     display: flex;
-    margin-top: 2%;
     flex-direction: column;
     justify-content: center;
     width: 1000px;
@@ -26,6 +25,21 @@
     max-width: 60%;
     min-width: 500px;
     margin: 0 auto;
+    margin-top: -30px;
+    /* height: 1000px/; */
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.824);
+}
+
+.hosts-background {
+    margin-top: -60px;
+    padding-top: 100px;
+    height: 1000px;
+    background-image: url(./road.jpeg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+
 }
 
 .host-texarea {
@@ -33,9 +47,10 @@
     width: 95%;
     height: 80px;
     font-size: medium;
-    background-color: white;
+    background-color: inherit;
     border: none;
     font-family: Arial, Helvetica, sans-serif;
+    padding: 10px;
 }
 
 .host-input {
@@ -44,7 +59,7 @@
     font-size: medium;
     border: none;
     border-bottom: 1px solid rgba(13, 1, 147, .2);
-    background-color: white
+    background-color: inherit
 }
 
 
@@ -64,5 +79,4 @@
 
 .host-submit:hover {
     background-color: rgb(17, 2, 190);
-
 }
