--- a/frontend/src/pages/HostPage/HostPage.css
+++ b/frontend/src/pages/HostPage/HostPage.css
@@ -30,6 +30,7 @@
     /* height: 1000px/; */
     border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.824);
+    font-family: 'Roboto', sans-serif
 }
 
 .hosts-background {
@@ -44,7 +45,6 @@
 
 .hosts-label {
     padding-left: 10px;
-
 }
 
 .host-texarea {
@@ -56,6 +56,7 @@
     border: none;
     font-family: Arial, Helvetica, sans-serif;
     padding: 10px;
+    font-family: 'Roboto', sans-serif
 }
 
 .host-input {
@@ -65,7 +66,8 @@
     border: none;
     border-bottom: 1px solid rgba(13, 1, 147, .2);
     background-color: inherit;
-    padding: 0 10px
+    padding: 0 10px;
+    font-family: 'Roboto', sans-serif
 }
 
 
@@ -81,6 +83,7 @@
     font-size: medium;
     color: rgb(255, 255, 229);
     padding: 7px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .host-submit:hover {
