--- a/frontend/src/components/SignUpFormPage/SignUp.css
+++ b/frontend/src/components/SignUpFormPage/SignUp.css
@@ -102,7 +102,11 @@
 }
 
 .dropdown-items {
-    padding: 20px 0;
+    padding: 10px 1px;
+    font-size: small;
+    color: rgb(106, 106, 142);
+    font-weight: bold;
+    font-family:sans-serif
 }
 
 .logout-button {
