--- a/frontend/src/pages/HomePage/HomePage.css
+++ b/frontend/src/pages/HomePage/HomePage.css
@@ -2,7 +2,8 @@ body {
     /* background-image: url('https://images.unsplash.com/photo-1568605117036-5fe5e7bab0b7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8&w=1000&q=80'); */
     /* background-size: cover; */
     background-repeat: no-repeat;
-    font-family: 'Roboto' sans-serif
+    font-family: 'Archivo', sans-serif;
+    font-size: small;
 }
 
 h2 {
