--- a/frontend/src/pages/HomePage/HomePage.css
+++ b/frontend/src/pages/HomePage/HomePage.css
@@ -64,8 +64,10 @@ input {
 }
 
 .bookings-container {
-    height: 850px;
-    overflow-y: auto;
+    height: 95%;
+    overflow-y: scroll;
+
+
 }
 
 .booking-container {
