--- a/frontend/src/components/EditBookings/EditBooking.css
+++ b/frontend/src/components/EditBookings/EditBooking.css
@@ -10,6 +10,7 @@
     top: 25%;
     margin: 0 auto;
     width: 50%;
+    height: 250px;
     border: 1px solid black;
     background-color: white;
 }
