--- a/frontend/src/pages/HomePage/HomePage.css
+++ b/frontend/src/pages/HomePage/HomePage.css
@@ -66,7 +66,8 @@ input {
 .bookings-container {
     height: 95%;
     overflow-y: scroll;
-
+    overflow-x: hidden;
+    overflow: overlay;
 
 }
 
